(distance) upgrade delta distance performance

--- a/src/notebooks/distance_delta_test.ipynb
+++ b/src/notebooks/distance_delta_test.ipynb
@@ -13,12 +13,12 @@
     "\n",
     "from src.utils.tsp_loader import load_tsp_matrix\n",
     "\n",
-    "D = load_tsp_matrix(\"Dane_TSP_76.xlsx\")"
+    "D = load_tsp_matrix(\"Dane_TSP_127.xlsx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "484a86b9",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "from src.utils.neighborhoods_numba_delta import neighbor_cost_delta_numba, neighbor_cost_delta_numba_debug\n",
+    "from src.utils.neighborhoods_numba_delta import neighbor_cost_delta_numba\n",
     "from src.utils.distance import route_length_fast\n",
     "# ----------------------------------------------------------\n",
     "# DEBUG — TEST POPRAWNOŚCI DELTA-COST SĄSIEDZTWA\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "4f8dc085",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
       "============================================================\n",
       "Benchmark: Delta vs Full Cost\n",
       "============================================================\n",
-      "Rozmiar problemu: 77 miast\n",
+      "Rozmiar problemu: 128 miast\n",
       "Iteracji: 20000000\n",
       "Warmup: 100\n",
       "\n",
@@ -292,14 +292,14 @@
       "Warmup... done\n",
       "\n",
       "Test 1: Full cost (całkowite przeliczenie)\n",
-      "  Czas: 30.3747 s\n",
-      "  Per iteracja: 1.52 us\n",
+      "  Czas: 29.4941 s\n",
+      "  Per iteracja: 1.47 us\n",
       "\n",
       "Test 2: Delta cost (tylko zmiana)\n",
-      "  Czas: 27.2344 s\n",
-      "  Per iteracja: 1.36 us\n",
+      "  Czas: 29.6755 s\n",
+      "  Per iteracja: 1.48 us\n",
       "\n",
-      "Wynik: delta jest 1.12x szybsza (10.3% oszczednosci)\n",
+      "Wynik: delta jest 0.99x szybsza (-0.6% oszczednosci)\n",
       "\n",
       "------------------------------------------------------------\n",
       "Operator: TWO-OPT\n",
@@ -307,15 +307,72 @@
       "Warmup... done\n",
       "\n",
       "Test 1: Full cost (całkowite przeliczenie)\n",
-      "  Czas: 32.2352 s\n",
-      "  Per iteracja: 1.61 us\n",
+      "  Czas: 33.1564 s\n",
+      "  Per iteracja: 1.66 us\n",
       "\n",
-      "Test 2: Delta cost (tylko zmiana)\n"
+      "Test 2: Delta cost (tylko zmiana)\n",
+      "  Czas: 27.7026 s\n",
+      "  Per iteracja: 1.39 us\n",
+      "\n",
+      "Wynik: delta jest 1.20x szybsza (16.4% oszczednosci)\n",
+      "\n",
+      "------------------------------------------------------------\n",
+      "Operator: INSERT\n",
+      "------------------------------------------------------------\n",
+      "Warmup... done\n",
+      "\n",
+      "Test 1: Full cost (całkowite przeliczenie)\n",
+      "  Czas: 31.1919 s\n",
+      "  Per iteracja: 1.56 us\n",
+      "\n",
+      "Test 2: Delta cost (tylko zmiana)\n",
+      "  Czas: 28.7324 s\n",
+      "  Per iteracja: 1.44 us\n",
+      "\n",
+      "Wynik: delta jest 1.09x szybsza (7.9% oszczednosci)\n",
+      "\n",
+      "============================================================\n",
+      "Podsumowanie\n",
+      "============================================================\n",
+      "\n",
+      "Operator     Full [s]   Delta [s]  Speedup    Oszczednosc \n",
+      "------------------------------------------------------------\n",
+      "SWAP         29.4941    29.6755    0.99      x -0.6        %\n",
+      "TWO-OPT      33.1564    27.7026    1.20      x 16.4        %\n",
+      "INSERT       31.1919    28.7324    1.09      x 7.9         %\n",
+      "\n",
+      "Srednie przyspieszenie: 1.09x\n",
+      "============================================================\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "results = benchmark_comparison(D, n_iterations=20_000_000)"
+    "results = benchmark_comparison(D, n_iterations=20_000_000)\n",
+    "# ============================================================\n",
+    "# Podsumowanie\n",
+    "# ============================================================\n",
+    "\n",
+    "# Operator     Full [s]   Delta [s]  Speedup    Oszczednosc \n",
+    "# ------------------------------------------------------------\n",
+    "# SWAP         29.8997    33.1749    0.90      x -11.0       %\n",
+    "# TWO-OPT      39.4528    28.1177    1.40      x 28.7        %\n",
+    "# INSERT       30.7797    28.0007    1.10      x 9.0         %\n",
+    "\n",
+    "# Srednie przyspieszenie: 1.13x\n",
+    "# ============================================================\n",
+    "# ============================================================\n",
+    "# Podsumowanie\n",
+    "# ============================================================\n",
+    "\n",
+    "# Operator     Full [s]   Delta [s]  Speedup    Oszczednosc \n",
+    "# ------------------------------------------------------------\n",
+    "# SWAP         29.4941    29.6755    0.99      x -0.6        %\n",
+    "# TWO-OPT      33.1564    27.7026    1.20      x 16.4        %\n",
+    "# INSERT       31.1919    28.7324    1.09      x 7.9         %\n",
+    "\n",
+    "# Srednie przyspieszenie: 1.09x\n",
+    "# ============================================================"
    ]
   }
  ],
