--- a/src/notebooks/sa_numba_multiprocessing.ipynb
+++ b/src/notebooks/sa_numba_multiprocessing.ipynb
@@ -53,14 +53,14 @@
     "\n",
     "\n",
     "# USTAWIENIA\n",
-    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
+    "TSP_FILES = [\"Dane_TSP_48.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_127.xlsx\"]\n",
     "\n",
     "PARAM_GRID = {\n",
-    "    \"T0\": [5000],\n",
-    "    \"alpha\": [0.999999],\n",
-    "    \"T_min\": [0.0001],\n",
-    "    \"max_iter\": [10_000_000],\n",
-    "    \"neighborhood_type\": [\"two_opt\"],\n",
+    "    \"T0\": [500, 1_000, 2_000, 10_000],\n",
+    "    \"alpha\": [0.95, 0.99, 0.999, 0.999999],\n",
+    "    \"T_min\": [0.1, 0.01, 0.001, 0.0001],\n",
+    "    \"max_iter\": [2_000, 5_000, 25_000, 100_000],\n",
+    "    \"neighborhood_type\": [\"swap\", \"two_opt\", \"insert\"],\n",
     "}\n",
     "\n",
     "REPEATS = 5\n",
