--- a/src/notebooks/nn.ipynb
+++ b/src/notebooks/nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -10,45 +10,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "\n",
-      "📂 Przetwarzanie instancji: Dane_TSP_76.xlsx\n",
+      "Instancja: Dane_TSP_48.xlsx\n",
+      "\n",
+      "Instancja: Dane_TSP_76.xlsx\n",
+      "\n",
+      "Instancja: Dane_TSP_127.xlsx\n",
+      "\n",
+      "Łączny czas eksperymentów: 0.01 min (0.49 sek)\n",
       "\n",
       "Podsumowanie (pierwsze 20 wierszy):\n",
-      "        instance  start_city          cost  runtime\n",
-      "Dane_TSP_76.xlsx           0 137263.626267 0.445025\n",
-      "Dane_TSP_76.xlsx           1 152346.888513 0.000261\n",
-      "Dane_TSP_76.xlsx           2 152034.932089 0.000205\n",
-      "Dane_TSP_76.xlsx           3 152892.222986 0.000194\n",
-      "Dane_TSP_76.xlsx           4 152424.658151 0.000193\n",
-      "Dane_TSP_76.xlsx           5 153491.807375 0.000192\n",
-      "Dane_TSP_76.xlsx           6 150295.578431 0.000193\n",
-      "Dane_TSP_76.xlsx           7 150488.574452 0.000194\n",
-      "Dane_TSP_76.xlsx           8 151515.026523 0.000191\n",
-      "Dane_TSP_76.xlsx           9 156155.190883 0.000193\n",
-      "Dane_TSP_76.xlsx          10 151965.322064 0.000192\n",
-      "Dane_TSP_76.xlsx          11 153251.670024 0.000191\n",
-      "Dane_TSP_76.xlsx          12 153131.377287 0.000191\n",
-      "Dane_TSP_76.xlsx          13 153176.810202 0.000194\n",
-      "Dane_TSP_76.xlsx          14 155871.911612 0.000227\n",
-      "Dane_TSP_76.xlsx          15 155760.247806 0.000216\n",
-      "Dane_TSP_76.xlsx          16 155155.253730 0.000191\n",
-      "Dane_TSP_76.xlsx          17 153577.133309 0.000193\n",
-      "Dane_TSP_76.xlsx          18 153305.822602 0.000189\n",
-      "Dane_TSP_76.xlsx          19 151249.672020 0.000190\n",
+      "        instance  start_city    cost  runtime\n",
+      "Dane_TSP_48.xlsx           0 12692.0 0.043568\n",
+      "Dane_TSP_48.xlsx           1 13531.0 0.001140\n",
+      "Dane_TSP_48.xlsx           2 13926.0 0.000373\n",
+      "Dane_TSP_48.xlsx           3 13035.0 0.000362\n",
+      "Dane_TSP_48.xlsx           4 14745.0 0.000278\n",
+      "Dane_TSP_48.xlsx           5 14017.0 0.000379\n",
+      "Dane_TSP_48.xlsx           6 13764.0 0.000314\n",
+      "Dane_TSP_48.xlsx           7 13479.0 0.000264\n",
+      "Dane_TSP_48.xlsx           8 12692.0 0.000258\n",
+      "Dane_TSP_48.xlsx           9 12791.0 0.000451\n",
+      "Dane_TSP_48.xlsx          10 14470.0 0.000323\n",
+      "Dane_TSP_48.xlsx          11 12970.0 0.000380\n",
+      "Dane_TSP_48.xlsx          12 13395.0 0.000134\n",
+      "Dane_TSP_48.xlsx          13 13046.0 0.000143\n",
+      "Dane_TSP_48.xlsx          14 13062.0 0.000251\n",
+      "Dane_TSP_48.xlsx          15 13190.0 0.000274\n",
+      "Dane_TSP_48.xlsx          16 12946.0 0.000138\n",
+      "Dane_TSP_48.xlsx          17 13665.0 0.000124\n",
+      "Dane_TSP_48.xlsx          18 13426.0 0.000122\n",
+      "Dane_TSP_48.xlsx          19 13797.0 0.000120\n",
       "\n",
       "Statystyki zbiorcze:\n",
       "       start_city        cost  runtime\n",
-      "count      77.000      77.000   77.000\n",
-      "mean       38.000  148656.546    0.006\n",
-      "std        22.372    4304.672    0.051\n",
-      "min         0.000  137263.626    0.000\n",
-      "25%        19.000  145895.862    0.000\n",
-      "50%        38.000  149128.509    0.000\n",
-      "75%        57.000  151965.322    0.000\n",
-      "max        76.000  156789.757    0.445\n",
+      "count     254.000     254.000  254.000\n",
+      "mean       48.150  116946.850    0.000\n",
+      "std        33.813   51155.024    0.003\n",
+      "min         0.000   12301.000    0.000\n",
+      "25%        21.000  130925.476    0.000\n",
+      "50%        42.000  137263.626    0.000\n",
+      "75%        70.000  147315.585    0.000\n",
+      "max       127.000  161273.311    0.044\n",
       "\n",
-      "Najlepsze miasto startowe: 0 (koszt 137263.63)\n",
-      "Najgorsze miasto startowe: 75 (koszt 156789.76)\n"
+      "Najlepsze miasto startowe: 38 (koszt 12301.00)\n",
+      "Najgorsze miasto startowe: 68 (koszt 161273.31)\n"
      ]
     }
    ],
@@ -70,7 +78,7 @@
     "\n",
     "\n",
     "# USTAWIENIA\n",
-    "TSP_FILES = [\"Dane_TSP_76.xlsx\"]\n",
+    "TSP_FILES = [\"Dane_TSP_48.xlsx\", \"Dane_TSP_76.xlsx\", \"Dane_TSP_127.xlsx\"]\n",
     "results = []\n",
     "\n",
     "\n",
