--- a/src/notebooks/nn.ipynb
+++ b/src/notebooks/nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "\n",
       "Instancja: Dane_TSP_48.xlsx\n",
       "\n",
@@ -19,44 +17,53 @@
       "\n",
       "Instancja: Dane_TSP_127.xlsx\n",
       "\n",
-      "Łączny czas eksperymentów: 0.01 min (0.49 sek)\n",
+      "Łączny czas eksperymentów: 0.02 min (0.90 sek)\n",
+      "\n",
       "\n",
       "Podsumowanie (pierwsze 20 wierszy):\n",
-      "        instance  start_city    cost  runtime\n",
-      "Dane_TSP_48.xlsx           0 12692.0 0.043568\n",
-      "Dane_TSP_48.xlsx           1 13531.0 0.001140\n",
-      "Dane_TSP_48.xlsx           2 13926.0 0.000373\n",
-      "Dane_TSP_48.xlsx           3 13035.0 0.000362\n",
-      "Dane_TSP_48.xlsx           4 14745.0 0.000278\n",
-      "Dane_TSP_48.xlsx           5 14017.0 0.000379\n",
-      "Dane_TSP_48.xlsx           6 13764.0 0.000314\n",
-      "Dane_TSP_48.xlsx           7 13479.0 0.000264\n",
-      "Dane_TSP_48.xlsx           8 12692.0 0.000258\n",
-      "Dane_TSP_48.xlsx           9 12791.0 0.000451\n",
-      "Dane_TSP_48.xlsx          10 14470.0 0.000323\n",
-      "Dane_TSP_48.xlsx          11 12970.0 0.000380\n",
-      "Dane_TSP_48.xlsx          12 13395.0 0.000134\n",
-      "Dane_TSP_48.xlsx          13 13046.0 0.000143\n",
-      "Dane_TSP_48.xlsx          14 13062.0 0.000251\n",
-      "Dane_TSP_48.xlsx          15 13190.0 0.000274\n",
-      "Dane_TSP_48.xlsx          16 12946.0 0.000138\n",
-      "Dane_TSP_48.xlsx          17 13665.0 0.000124\n",
-      "Dane_TSP_48.xlsx          18 13426.0 0.000122\n",
-      "Dane_TSP_48.xlsx          19 13797.0 0.000120\n",
+      "        instance  start_city    cost  runtime                                                                                                                                min_route\n",
+      "Dane_TSP_48.xlsx           0 12692.0 0.438265 0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           1 13531.0 0.000161 1-0-2-29-5-48-39-32-21-47-11-23-14-25-13-12-15-33-46-44-18-7-28-36-30-6-37-19-27-43-17-20-40-9-38-31-8-22-16-3-34-41-42-10-24-45-35-26-4\n",
+      "Dane_TSP_48.xlsx           2 13926.0 0.000126 2-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-8\n",
+      "Dane_TSP_48.xlsx           3 13035.0 0.000118 3-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           4 14745.0 0.000117 4-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           5 14017.0 0.000115 5-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           6 13764.0 0.000115 6-0-1-9-38-31-44-18-7-28-36-30-27-19-37-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           7 13479.0 0.000114 7-0-1-9-38-31-44-18-36-28-6-37-19-27-43-30-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx           8 12692.0 0.000115 8-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2\n",
+      "Dane_TSP_48.xlsx           9 12791.0 0.000114 9-0-1-8-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2\n",
+      "Dane_TSP_48.xlsx          10 14470.0 0.000117 10-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx          11 12970.0 0.000116 11-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-20-47-21-13-25-14-23-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-40-8\n",
+      "Dane_TSP_48.xlsx          12 13395.0 0.000114 12-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-40-11-23-14-25-13-21-47-20-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx          13 13046.0 0.000115 13-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-39-32-21-47-20-40-3-22-16-41-34-29-5-48-42-10-24-45-35-26-4-2-8\n",
+      "Dane_TSP_48.xlsx          14 13062.0 0.000114 14-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-13-25-39-32-21-47-20-40-3-22-16-41-34-29-5-48-42-10-24-45-35-26-4-2-8\n",
+      "Dane_TSP_48.xlsx          15 13190.0 0.000115 15-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx          16 12946.0 0.000114 16-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-8-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2\n",
+      "Dane_TSP_48.xlsx          17 13665.0 0.000114 17-0-1-9-38-31-44-18-7-28-36-30-6-37-19-27-43-20-33-46-15-12-11-23-14-25-13-21-47-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx          18 13426.0 0.000113 18-0-1-9-38-31-44-7-28-36-30-6-37-19-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
+      "Dane_TSP_48.xlsx          19 13797.0 0.000114 19-0-1-9-38-31-44-18-7-28-36-30-6-37-27-43-17-33-46-15-12-11-23-14-25-13-21-47-20-40-3-22-16-41-34-29-5-48-39-32-24-10-42-26-4-35-45-2-8\n",
       "\n",
-      "Statystyki zbiorcze:\n",
+      "Najlepsze parametry dla każdej instancji:\n",
+      "\n",
+      "Dane_TSP_48.xlsx\n",
+      "odległość 12301.0 = {'instance': 'Dane_TSP_48.xlsx', 'start_city': 38, 'cost': 12301.0, 'runtime': 0.00011649998486973345, 'min_route': '38-0-1-9-40-15-12-33-46-44-18-7-28-36-30-6-37-19-27-43-17-20-47-11-23-14-25-13-21-39-32-48-5-29-2-42-10-24-45-35-26-4-34-3-22-16-41-8-31'}\n",
+      "\n",
+      "Dane_TSP_76.xlsx\n",
+      "odległość 137263.62626660668 = {'instance': 'Dane_TSP_76.xlsx', 'start_city': 0, 'cost': 137263.62626660668, 'runtime': 0.00021050000214017928, 'min_route': '0-1-2-23-22-21-25-24-46-45-44-48-47-69-68-67-50-49-52-53-54-42-43-28-29-30-31-19-20-5-6-7-8-9-10-11-12-13-14-15-16-17-18-37-36-35-34-40-41-60-59-58-57-63-64-62-61-55-56-51-66-65-71-72-73-39-38-32-33-27-26-4-3-75-76-74-70'}\n",
+      "\n",
+      "Dane_TSP_127.xlsx\n",
+      "odległość 123847.15992703538 = {'instance': 'Dane_TSP_127.xlsx', 'start_city': 0, 'cost': 123847.15992703538, 'runtime': 0.000368500011973083, 'min_route': '0-1-16-2-51-57-54-45-103-44-35-36-37-41-14-12-31-27-30-43-34-39-38-26-25-33-122-28-29-32-80-79-77-18-21-17-22-4-23-24-6-106-15-108-20-19-72-8-9-11-114-105-7-120-10-115-13-50-5-56-121-52-124-55-66-113-64-58-100-3-90-116-60-62-61-91-59-67-73-74-68-71-70-69-75-76-78-117-84-81-126-82-83-102-101-63-119-96-109-87-86-85-88-110-104-125-89-92-99-65-47-49-53-118-48-46-94-112-111-107-127-93-95-123-97-42-40-98'}\n",
+      "\n",
+      "Statystyki zbiorcze (całość):\n",
       "       start_city        cost  runtime\n",
       "count     254.000     254.000  254.000\n",
-      "mean       48.150  116946.850    0.000\n",
-      "std        33.813   51155.024    0.003\n",
+      "mean       48.150  116946.850    0.002\n",
+      "std        33.813   51155.024    0.027\n",
       "min         0.000   12301.000    0.000\n",
       "25%        21.000  130925.476    0.000\n",
       "50%        42.000  137263.626    0.000\n",
       "75%        70.000  147315.585    0.000\n",
-      "max       127.000  161273.311    0.044\n",
-      "\n",
-      "Najlepsze miasto startowe: 38 (koszt 12301.00)\n",
-      "Najgorsze miasto startowe: 68 (koszt 161273.31)\n"
+      "max       127.000  161273.311    0.438\n"
      ]
     }
    ],
@@ -91,39 +98,47 @@
     "    n = D.shape[0]\n",
     "\n",
     "    for start_city in range(n):\n",
+    "\n",
     "        params = {\"start_city\": start_city}\n",
     "\n",
     "        start_t = time.perf_counter()\n",
     "        route, cost, runtime, meta = solve_tsp(D, params)\n",
     "        total_time = time.perf_counter() - start_t\n",
     "\n",
+    "        route_str = \"-\".join(map(str, route))\n",
+    "\n",
     "        results.append({\n",
     "            \"instance\": tsp_file,\n",
     "            \"start_city\": start_city,\n",
     "            \"cost\": cost,\n",
     "            \"runtime\": total_time,\n",
+    "            \"min_route\": route_str,\n",
     "        })\n",
-    "\n",
     "\n",
     "# ZAPIS WYNIKÓW\n",
     "end_total = time.perf_counter()\n",
     "elapsed = end_total - start_total\n",
     "\n",
-    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\")\n",
+    "print(f\"\\nŁączny czas eksperymentów: {elapsed/60:.2f} min ({elapsed:.2f} sek)\\n\")\n",
     "\n",
     "df = pd.DataFrame(results)\n",
     "save_experiment_results(df, time_seconds=int(elapsed), subfolder=\"NN\")\n",
     "\n",
     "\n",
     "# RAPORT\n",
-    "print(\"\\nStatystyki zbiorcze:\")\n",
-    "print(df.describe().round(3))\n",
+    "print(\"\\nNajlepsze parametry dla każdej instancji:\")\n",
     "\n",
-    "best = df.loc[df[\"cost\"].idxmin()]\n",
-    "worst = df.loc[df[\"cost\"].idxmax()]\n",
+    "instances = df[\"instance\"].unique()\n",
     "\n",
-    "print(f\"\\nNajlepsze miasto startowe: {best.start_city} (koszt {best.cost:.2f})\")\n",
-    "print(f\"Najgorsze miasto startowe: {worst.start_city} (koszt {worst.cost:.2f})\")"
+    "for inst in instances:\n",
+    "    sub = df[df[\"instance\"] == inst]\n",
+    "    best_row = sub.loc[sub[\"cost\"].idxmin()]   # ← NN ma kolumnę cost\n",
+    "    print(f\"\\n{inst}\")\n",
+    "    print(f\"odległość {best_row['cost']} = {best_row.to_dict()}\")\n",
+    "\n",
+    "\n",
+    "print(\"\\nStatystyki zbiorcze (całość):\")\n",
+    "print(df.describe().round(3))"
    ]
   }
  ],
